<resources>
    <string name="app_name">Drawer Fragment</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="go_to_home">Go To Home</string>
    <string name="go_to_history">Go To History</string>
    <string name="go_to_about">Go To About</string>
    <string name="go_to_profile">Go To Profile</string>
</resources>