<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtMainFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="Main Fragment"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnHomeGoToHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_history"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/txtMainFragment"
        android:layout_centerInParent="true"/>


    <Button
        android:id="@+id/btnHomeGoToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_profile"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/btnHomeGoToHistory"
        android:layout_centerInParent="true"/>


    <Button
        android:id="@+id/btnHomeGoToAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_about"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/btnHomeGoToProfile"
        android:layout_centerInParent="true"/>

</RelativeLayout>